# employee-monapp-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml  pages.yml
public/: index.html  style.css
src/: backend.rs  frontend.rs  main.rs
