[package]
name = "employee-monitoring-app"
version = "0.1.0"
edition = "2021"

# Add these dependencies
[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
leptos = { version = "0.2", features = ["ssr"] }